# oncology-medecine-report-dashboard

./: .gitignore  README.md  pyproject.toml  weekly_scrape.yaml
.github/workflows/: drug_database.yaml  weekly_scrape.yaml
src/: database.py  main.py  models.py  recalls.db  scratch.py
src/data/: nci_oncology_drugs.json  recalls.csv  recalls.db
src/scrapers/: base.py  config.py  fda_usa.py  fdaghana.py  fdausa.py  healthcanada.py  nafdac.py  sources.json  utils.py
tests/: conftest.py  test_fda_usa_scraper.py  test_fdaghana.py  test_fdausa.py  test_health_canada.py  test_nafdac.py  test_nafdac_scraper.py  test_utils.py
tests/test_files/: fda_result.json
