[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncology-medecine-report-dashboard"
version = "0.1.0"
description = "Dashboard for oncology medicine reports"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pydantic>=2.0",
    "pandas>=2.0.3",
    "pyflakes>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-anyio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[dependency-groups]
dev = [
    "pyflakes>=3.2.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"